--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,14 @@ article{
     grid-area: illustration;
 }
 
+.search-button{
+   display: none;
+}
+
+.form-responsive{
+    display: none;
+}
+
 .welcome-page__illustration img{
     height: 100vh;
     width: 38vw;
@@ -122,6 +130,11 @@ header>h1{
     font-size:xx-large;
     color: white;
 }
+
+input[type="checkbox"]{
+    display: none;
+}
+
 aside{
     display: flex;
     flex-direction: column;
